src/components/ids-button/ids-button-base.scss
/**
 * Ids Button Sass mixins, used in Ids Button CSS to define base styles.
 */
@use '../../themes/mixins/ids-core-mixins' as mixins;

// Mixin for a "blank" shadow (same as the standard one with a completely transparent alpha)
@mixin blank-shadow() {
  box-shadow: var(--ids-shadow-none);
}

// Used to make the focus "border" appear to be separated from the button (primary/secondary types).
@mixin outset-button-shadow($bg-color, $border-color) {
  box-shadow:
    0 0 0 2px $bg-color, // bg color
    0 0 0 3px $border-color
}

// Used to make the focus "border" on non-solid buttons (modal buttons, etc)
@mixin modal-button-shadow() {
  box-shadow: var(--ids-modal-shadow-focus); // primary color (shadowy-part)
}

@mixin alternate-button-shadow() {
  box-shadow: var(--ids-box-shadow-inverse);
}

// Used to include a basic set of button styles within each individual button prototype.
@mixin ids-base-button-styles() {
  @include blank-shadow();

  font-weight: var(--ids-font-weight-normal);
  font-family: var(--ids-font-family-default);
  font-size: var(--ids-font-size-40);
  overflow: hidden;
  padding-bottom: calc(var(--ids-space-xs) - 2px);
  padding-top: calc(var(--ids-space-xs) - 2px);
  position: relative;

  &,
  &::before,
  &::after {
    box-sizing: border-box;
  }

  // Nothing inside the button itself should accept mouse events
  * {
    pointer-events: none;
  }

  // ====================================================
  // Base Button styles (default/tertiary)

  border: 1px solid transparent;
  background-color: transparent;
  color: var(--ids-button-color-text-default);

  // Animate BG/Text/Border color changes on all styles
  transition:
    background-color var(--ids-motion-duration) var(--ids-motion-ease),
    border-color var(--ids-motion-duration) var(--ids-motion-ease),
    color var(--ids-motion-duration) var(--ids-motion-ease),
    opacity var(--ids-motion-duration) var(--ids-motion-ease);
  white-space: nowrap;

  &:focus {
    // Disable standard focus state in Chrome
    outline: none;
    outline-color: transparent;
  }

  &:not([disabled]) {
   cursor: var(--ids-cursor-pointer);
  }

  // ====================================================
  // Standard element types inside the button
  span {
    vertical-align: bottom;

    &.audible {
      @include mixins.audible();
    }
  }

  &:not(.ids-icon-button) ::slotted(ids-icon) {
    margin-inline-end: calc(var(--ids-space-xxs) + 3px);
  }

  .ids-icon {
    vertical-align: middle;
  }

  // ====================================================
  // Alignment changes

  &.align-icon-end {
    ::slotted(ids-icon) {
      padding-inline-start: var(--ids-space-xxs);
    }
  }

  &.content-align-start {
    justify-content: start;
  }

  &.content-align-end {
    justify-content: end;
  }

  &.no-margins {
    margin-inline: var(--ids-space-none);
  }

  &:not(.no-margins) {
    margin: var(--ids-button-alt-margin);
  }

  &.field-height-xxs:not(.btn-secondary):not(.no-margins) {
    margin-block-start: 3px;
    margin-inline-end: -2px;
    height: 22px;
    width: 22px;
  }

  ::slotted(span) {
    // important due to reset in enterprise
    font-weight: inherit !important;
  }
}

/**
 * Provides standardized padding rules for certain button types
 */
@mixin ids-standard-button-padding() {
  padding-inline: var(--ids-button-padding-inline);
}

@mixin ids-inline-button-padding() {
  padding-inline: var(--ids-space-12);
}
/* ... */

